Took a closer look at spacing values and added notes. Also fixed a double occurance of an ID.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,8 +30,8 @@ body {
 }
 
 .name {
-    width: 350px;
-    height: 75px;
+    width: 350px;/* 350+610=960 */
+    height: 75px; /* 75+5 = 80 */
     padding-top: 5px;
     text-align: center;
     background-color: #4aaaa5;
@@ -48,7 +48,7 @@ body {
 }
 
 .navLinks {
-    height: 75px;
+    height: 75px; /* 75+5 = 80 */
     width: 610px;
     text-align: right;
     text-decoration: none;
@@ -58,10 +58,10 @@ body {
 }
 
 .contentIndex {
-    width: 960px;
-    height: 510px;
+    width: 960px; /* match .insideHead */
+    height: 510px; /* is it better to have an ID for each page adjusting the height? */
     margin-left: 25%;
-    margin-top: 50px;
+    margin-top: 40px; /* half of header height */
     background-color: #ffffff;
     border-style: solid;
     border-color: #dddddd;
@@ -71,7 +71,7 @@ body {
     width: 960px;
     height: 610px;
     margin-left: 25%;
-    margin-top: 50px;
+    margin-top: 40px;
     background-color: #ffffff;
     border-style: solid;
     border-color: #dddddd;
@@ -81,17 +81,18 @@ body {
     width: 960px;
     height: 535px;
     margin-left: 25%;
-    margin-top: 50px;
+    margin-top: 40px;
     background-color: #ffffff;
     border-style: solid;
     border-color: #dddddd;
 }
 
 .contentTopper {
-    margin: 0px 20px 0px 20px;
-    height: 60px;
-    width: 920px;
-    border-bottom: 3px solid #dddddd;
+    margin: 0px 20px 0px 20px; /* to create the apearance of a uncompleted boarder */
+    height: 40px; /* h1=80px h2=60px */
+    padding: 0px 0px 20px 0px;
+    width: 920px; /* (20px * 2) - each side missing 20px to match the 40 gap between header and content */
+    border-bottom: 2px solid #dddddd;
 }
 
 h2 {
@@ -104,7 +105,7 @@ img {
 }
 
 p, h3 { 
-    padding: 1% 2.5% 0px 2.5%;
+    padding: 1% 2.5% 0px 2.5%; /* unsure why top looks like has a margin even with a 0px value */
 }
 
 .theRealSubmitButton {
@@ -123,7 +124,6 @@ p, h3 {
 .galleryTag {
     width: 100%;
     height: 50px;
-    margin-bottom: 25%;
     text-align: center;
     background-color: #4aaaa5;
     float: left;
@@ -143,7 +143,7 @@ p, h3 {
 }
 
 div.gallery {
-    margin: 3% 7% 0px 7% ;
+    margin: 3% 7% 0px 7% ; /* fits 3 wide nicely */
     float: left;
     width: 180px;
 }
@@ -153,15 +153,15 @@ div.gallery img {
     height: auto;
 }
 
-#inputBoxA {
-    border: 3px solid #dddddd;
+.inputBox {
+    border: 2px solid #dddddd;
 }
 
-#inputBoxB {
+.textareaBox {
     text-align: left;
     height: 150px;
     width: 910px;
-    border: 3px solid #dddddd;
+    border: 2px solid #dddddd;
     resize: none;
 }
 
@@ -170,7 +170,7 @@ div.gallery img {
 }
 
 .footer {
-    padding: 25px;
+    padding: 30px;
     border-top: 8px solid #4aaaa5;
     background-color: #666666
 }
